sub routes and page assignment to team members

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,13 +1,31 @@
 .no-scroll {
   overflow: hidden !important;
 }
+.grid-container {
+  display: grid;
+  grid-template-columns: 296px 1fr;
+  grid-template-rows: 92px 1fr;
+  grid-template-areas:
+    "sidebar header"
+    "sidebar main";
+  height: 100vh;
+  width: 100%;
 
+  @media screen and (max-width: 1023px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas:
+      "header"
+      "main";
+  }
+}
+
+/* ------------------------ */
 #sidebar {
   grid-area: sidebar;
   background-color: #002855;
   display: flex;
   flex-direction: column;
-  border-right: 1px solid #eeeeee;
   @media screen and (max-width: 1023px) {
     grid-area: unset;
     position: fixed;
@@ -75,21 +93,78 @@
     transform: translateX(0);
   }
 }
-
+/* ------------------------------------------------ */
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 17px;
-  z-index: 2;
-  border-bottom: 1px solid #eeeeee;
+  padding: 17px 0px 26px 38px;
+  z-index: 10;
+  background-color: #ffffff;
+
   .menu-icon {
     display: none;
   }
+
+  .search-container {
+    display: flex;
+    align-items: center;
+    padding: 14px 57px 15px 14px;
+    height: 49px;
+    max-width: 284px;
+    gap: 11px;
+    border-radius: 5px;
+    background-color: #f0f2fa;
+  }
+
+  .search-input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    font-size: 16px;
+    background-color: transparent;
+    outline: none;
+  }
+
+  .search-icon {
+    position: absolute;
+    margin-left: 10px;
+    font-size: 18px;
+    color: #6b7280;
+  }
+
+  .header-right {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+  }
+
+  .profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    margin-right: 1rem;
+  }
+
+  .profile-image {
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .profile-name {
+    font-size: 16px;
+    color: #333;
+  }
+
+  .dropdown-arrow {
+    font-size: 16px;
+    color: #333;
+  }
 }
-.main {
+.main-content {
   grid-area: main;
-  background-color: #fdfdfd;
+  background-color: #f0f2fa;
   overflow: scroll;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
@@ -97,29 +172,6 @@
   /* Hide scrollbar for Chrome, Safari, and Opera */
   &::-webkit-scrollbar {
     display: none;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 296px 1fr;
-  grid-template-rows: 60px 1fr;
-  grid-template-areas:
-    "sidebar header"
-    "sidebar main";
-  height: 100vh;
-  width: 100%;
-
-  @media (min-width: 1024px) and (max-width: 1280px) {
-    grid-template-columns: 130px 1fr;
-  }
-
-  @media screen and (max-width: 1023px) {
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas:
-      "header"
-      "main";
   }
 }
 
