fixed scripts injection and report progress

--- a/layout/layout.html
+++ b/layout/layout.html
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="sidebar_list">
-          <a href="#settings" exact="active-link">
+          <a href="#/settings" exact="active-link">
             <img src="../assets/setting-icon.svg" alt="" />
             <span class="sidebar-text"> Settings </span>
           </a>
