report page fix. dashboard page added

--- a/layout/layout.html
+++ b/layout/layout.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
   <header class="header">
-    <div class="menu-icon" onclick="Sidebar()">
+    <div class="menu-icon" onclick="ShowSidebar()">
       <p>menu</p>
     </div>
     <div class="search-container">
