working on charts

--- a/css/report.css
+++ b/css/report.css
@@ -142,7 +142,7 @@
   margin-bottom: 16px;
 }
 .report-prospect-conversion h3 {
-  margin-bottom: ;
+  margin-bottom: 10px;
 }
 .report-top-branches h3 {
   margin-bottom: 23px;
