--- a/css/settings.css
+++ b/css/settings.css
@@ -57,7 +57,6 @@
   display: none;
 }
 
-
 .settings-option:hover {
   background-color: #f0f0f0;
 }
@@ -87,10 +86,10 @@
 }
 
 /* general  style for account information and change password heading */
-.change-password-settings-content h2,
+.change-password-content h2,
 .account-info h2,
 .bank-info h2,
-.notification-settings h2 {
+.notification-settings-content h2 {
   padding: 20px;
   font-size: 24px;
   font-weight: 500;
@@ -152,7 +151,7 @@ input::placeholder {
   background-color: #e9e9e9;
 }
 
-.bank-info-container button {
+.bank-info .acct-btn {
   width: 207px;
   height: 64px;
   padding: 10px 5px 10px 5px;
@@ -161,6 +160,13 @@ input::placeholder {
   display: block;
   cursor: pointer;
   margin: 40px 35%;
+  background-color: #002855;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29.52px;
+  letter-spacing: -0.03em;
+  text-align: center;
 }
 
 /* =======CHANGE PASSWORD FORM STYLE======= */
@@ -210,7 +216,7 @@ form input {
   padding: 2% 0 0 3%; /* Add padding for the placeholder, added in the input cause in the placeholder it moves only vertically */
 }
 
-button {
+.password-btn {
   width: 353px;
   height: 66px;
   padding: 16px 8px 16px 8px;
@@ -227,7 +233,7 @@ button {
 }
 
 /* NOTIFICATION STYLE */
-.notification-settings{
+.notification-settings {
   display: none;
 }
 .section {
@@ -358,17 +364,17 @@ input:checked + .slider:before {
   .settings-container {
     flex-direction: column;
   }
-  
+
   .settings-menu {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
-  
+
   .content-container {
     margin-top: 20px;
   }
-  
+
   .settings-option {
     margin-bottom: 10px;
   }
