--- a/css/ongoing-prospect.css
+++ b/css/ongoing-prospect.css
@@ -32,7 +32,6 @@
   display: flex;
   padding: 10px 40px;
   background-color: #fff;
-  height: 200px;
   gap: 50px;
   border-radius: 5px;
 }
@@ -124,16 +123,29 @@
   font-weight: 500;
   line-height: 17.71px;
   text-align: left;
-  color: #353535;
-  margin: 10px 0px;
+  color: #353535; 
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+
 .summaryTable {
 width:100%;
 }
-.summartTableContent {
+.summaryTableContent {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #f1ecec;
 }
+.summaryTableContent > span {
+    font-family: Circular Std;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15.18px;
+    text-align: center;
+    color:#353535;
+    }
+
 .summaryText {
   display: flex;
   gap: 10px;
@@ -167,10 +179,14 @@ width:100%;
  /* chatbox style */
  
  .chatContainer{
+    
     width:100%;
     background-color: #fff;
     display:flex;
     justify-content: space-between;
+    padding-top: 20px;
+    display:none;
+    
  }
  .chatBoxCont{
    display:flex; 
@@ -220,6 +236,7 @@ color:#000000;
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
+    gap:10px;
  }
  .chatText2 >p {
     background-color: #f3f5f6;
@@ -272,7 +289,139 @@ color:#000000;
     background: #F0F2FA
 }
 .inputOverallContainer{  
+    display:none;
     width:100%;
     background-color: #fff;
+    padding-top: 30px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
    
 }
+
+@media screen and (max-width:1300px){
+    .startAChat {
+        height: 45px;
+        padding: 0px 30px;
+        font-size: 8px;
+        font-weight: 200;
+        line-height: 7.97px;        
+}
+
+}
+@media screen and (max-width:1100px){
+.topImg{
+display: none;
+}
+}
+@media screen and (max-width: 847px) {
+.profileCard{
+    flex-direction: column;
+}
+.profileHeader{
+    padding-left: 50px;
+}
+.profileHeader > h2{
+    text-align: left;
+}
+.ongoingProspectImgWithText {
+    padding-top: 0px;
+}
+}
+@media screen and (max-width: 678px) {
+    .profileDetails {
+        flex-direction: column;
+    }
+    .profileHeader{
+        padding-left: 0px;
+    }
+    .profileDetails {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+        gap: 20px;
+    }
+    .detailItem {
+        display: flex;
+        flex-direction: column;
+        flex: 0 0 calc(50% - 10px);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        border-radius: 5px;
+        background-color: #fff;
+    }
+    .startAChat{
+        width:120px;
+    }  
+    
+}
+
+@media screen and (max-width: 560px){
+    .summaryTable {
+        display: flex;
+        flex-direction: column;
+    }   
+    .summaryTableContent {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 40px;
+        border-radius: 5px;
+        background-color: #fff;
+        margin-bottom: 20px;
+    }
+    .summaryTableContent > span{
+        /* justify-content: flex-start; */
+        text-align: left;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .chatText > img, .chatText2 >img{
+        width:30px;
+        height:30px;
+    }
+    .chatText > p, .chatText2 >p {   
+        font-size: 7px;
+        font-weight: 450;
+        line-height: 11.71px;
+        text-align: left;
+        color: #000000;
+}
+.inputContainer {
+    padding:10px;
+}
+
+}
+
+
+@media screen and (max-width: 400px){
+    .profileDetails {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .detailItem {
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        border-radius: 5px;
+        background-color: #fff;
+    }
+    .chatButton {
+        width:120px
+    }
+    .activityButton{
+        width:120px;
+    }
+    .inputContainer> img{
+        margin:0px 3px;
+    }
+}
+@media screen and (max-width:361px){
+    .inputContainer>input {
+        width:150px
+    }
+}
+
