--- a/layout/layout.html
+++ b/layout/layout.html
@@ -1,8 +1,9 @@
-
 <div class="grid-container">
   <header class="header">
     <div class="menu-icon" data-toggle="#sidebar">
-      <p>menu</p>
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
     <div class="search-container">
       <img src="../assets/search.svg" alt="" />
