--- a/css/layout.css
+++ b/css/layout.css
@@ -94,7 +94,26 @@
 }
 
 .menu-icon {
-  display: none;
+  width: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.menu-icon span {
+  width: 100%;
+  height: 4px; /* Adjust the height to your preference */
+  display: block;
+}
+
+.menu-icon span:first-child,
+.menu-icon span:last-child {
+  background-color: #002855;
+}
+
+.menu-icon span:nth-child(2) {
+  background: linear-gradient(180deg, #e6b014 45.48%, #fdbf6f 95.06%);
 }
 
 .header .search-container {
@@ -176,10 +195,37 @@
       "main";
   }
 }
+@media (min-width: 1023px) and (max-width: 1280px) {
+  .grid-container {
+    grid-template-columns: 230px 1fr;
+  }
+}
 
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 1023px) {
   .menu-icon {
-    display: block;
+    display: none;
+  }
+}
+@media (max-width: 480px) {
+  .profile {
+    gap: 10px;
+  }
+  .notification {
+    display: none;
+  }
+  .menu-icon {
+    width: 35px;
+  }
+  .profile-name {
+    font-size: 12px;
+  }
+
+  .profile img:nth-child(3) {
+    width: 12px;
+  }
+  .profile img:nth-child(1) {
+    width: 30px;
+    height: 30px;
   }
 }
 @media screen and (max-width: 1023px) {
@@ -199,7 +245,7 @@
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
     backdrop-filter: blur(30px);
-    z-index: 66;
+    z-index: 190;
   }
 
   .logo {
