--- a/css/dashboard-page.css
+++ b/css/dashboard-page.css
@@ -124,6 +124,10 @@
   padding: 20px;
   border-radius: 8px;
 }
+
+.chart .dashchart {
+  max-width: 100%;
+}
 /* .chart {
     max-width: 1050px;
     margin: 3px auto;
