updating the redirecting link, still not fully functional YET.

--- a/css/dashboard-page.css
+++ b/css/dashboard-page.css
@@ -35,19 +35,19 @@
 }
 
 .blue {
-  background-color: #002d72;
+  background-color: #002855;
 }
 
 .yellow {
-  background-color: #ffc107;
+  background-color: #E6B014;
 }
 
 .brown {
-  background-color: #1c0909;
+  background-color: #353535;
 }
 
 .green {
-  background-color: #28a745;
+  background-color: #00B388;
 }
 
 .actions {
